# jp2subs

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_and_run.bat
.github/workflows/: build.yml  ci.yml
examples/: master.sample.json
scripts/: build_exe.ps1
src/jp2subs/: __init__.py  asr.py  audio.py  cli.py  config.py  deps.py  io.py  models.py  paths.py  pipeline.py  romanizer.py  subtitles.py  translation.py  video.py
src/jp2subs/gui/: __init__.py  __main__.py  main.py  state.py  theme.py  widgets.py  worker.py
tests/: test_asr.py  test_batch.py  test_config.py  test_deps.py  test_gui_import.py  test_paths.py  test_schema.py  test_translation_available.py  test_translation_progress.py  test_video.py  test_wizard.py  test_writers.py
