[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jp2subs"
version = "0.1.0"
description = "CLI pipeline to transcribe, romanize, translate, and subtitle Japanese audio/video."
authors = [{name = "Open Source Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "typer[all]>=0.12",
  "pykakasi>=2.2.1",
  "tqdm>=4.66",
  "rich>=13.7",
  "python-dateutil>=2.8",
]
[project.optional-dependencies]
llm = ["requests>=2.31"]
asr = ["faster-whisper>=1.0"]

[project.scripts]
jp2subs = "jp2subs.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
